log/build_2025-01-04_14-20-46/arcuo_marker_detection/stderr.log
/home/sarthak/.local/lib/python3.10/site-packages/setuptools/_distutils/dist.py:261: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
  File "/home/sarthak/precise_docking_ws/install/arcuo_marker_detection/lib/python3.10/site-packages/arcuo_marker_detection/arcuo_detection.py", line 249
    )
    ^
SyntaxError: unmatched ')'

